# navigator

./: README.md
doc/: summary.md  waypoints.md
ros/src/common/cmake/navigator_build_flags/: CMakeLists.txt  package.xml
ros/src/msgs/navigator_msgs/: CMakeLists.txt  package.xml
ros/src/msgs/navigator_msgs/msg/: DetectedObject.msg  RemoteCmd.msg  VehicleCmd.msg
