<?xml version="1.0"?>
<package>
  <name>navigator_build_flags</name>
  <version>1.0.0</version>
  <description>Common build flags for Navigator.</description>

  <author email="fr1140m@gmail.com">gA4ss</author>
  <maintainer email="fr1140m@gmail.com">gA4ss</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
